syntax = "proto3";

package calcultor;

option go_package = "/calculatorpb";

message SumRequest {
  int32 first_number = 1;
  int32 second_nunmber = 2;
}

message SumResponse {
  int32 sum__result = 1;
}

message PrimeNumberDecompositionRequest {
  int64 number = 1;
}

message PrimeNumberDecompositionResponse {
  int64 primefactor = 1;
}

message ComputerAverageRequest {
  int32 number = 1;
}

message ComputerAverageResponse {
  double average = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 maximum = 1;
}

message SquareRootRequest {
  int32 number = 1;  
}

message SquareRootResponse {
  double number_root = 1;
}
service CalculatorService {
  rpc Sum (SumRequest) returns (SumResponse) {};

  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) 
    returns (stream PrimeNumberDecompositionResponse) {};

  rpc ComputerAverage(stream ComputerAverageRequest) returns (ComputerAverageResponse) {};

  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {}

  // Error handling
  // This RPC will throw an exception if the sent number is negative.  
  // The error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}
}